--- a/CV.html
+++ b/CV.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Créer votre CV</title>
     <link rel="stylesheet" href="style.css">
+    <script src="javascript.js"></script>
 </head>
 
 <body>
@@ -23,68 +24,210 @@
         </nav>
     </header>
     <section>
-        <div class="cvcrrer">
-            <div class="flex-item1">
-                <div class="form">
-                    <div class="title">
-                        Formulaire CV
-                        <span></span>
-                    </div>
+        <div class="flex-item1">
+            <div class="form">
+                <div class="title">
+                    Formulaire CV
+                    <span></span>
+                </div>
 
-                    <form action="/submit_cv.php" method="post">
+                <!-- Étape 1: Informations Personnelles -->
+                <div class="step active" id="step1">
+                    <h3>Informations Personnelles</h3>
+                    <form>
                         <div class="flex">
-                            <label for="nom">
-                                Nom :
-                                <input type="text" id="nom" name="nom" class="input" required>
-                                <span>Nom</span>
-                            </label>
+                            <div class="input-group">
+                                <label for="nom_prenom">
+                                    Nom et Prénom :
+                                    <input type="text" id="nom_prenom" name="nom_prenom" class="input" required>
+                                </label>
+                            </div>
 
-                            <label for="prenom">
-                                Prénom :
-                                <input type="text" id="prenom" name="prenom" class="input" required>
-                                <span>Prénom</span>
-                            </label>
+                            <div class="input-group">
+                                <label for="adresse">
+                                    Adresse :
+                                    <input type="text" id="adresse" name="adresse" class="input" required>
+                                </label>
+                            </div>
 
-                            <label for="adresse">
-                                Adresse :
-                                <input type="text" id="adresse" name="adresse" class="input" required>
-                                <span>Adresse</span>
-                            </label>
+                            <div class="input-group">
+                                <label for="email">
+                                    Adresse mail :
+                                    <input type="email" id="email" name="email" class="input" required>
+                                </label>
+                            </div>
 
-                            <label for="competences">
-                                Compétences :
-                                <textarea id="competences" name="competences" class="input" rows="4"
-                                    required></textarea>
-                                <span>Compétences</span>
-                            </label>
-
-                            <label for="experience">
-                                Expérience professionnelle :
-                                <textarea id="experience" name="experience" class="input" rows="4" required></textarea>
-                                <span>Expérience professionnelle</span>
-                            </label>
-
-                            <label for="education">
-                                Éducation :
-                                <textarea id="education" name="education" class="input" rows="4" required></textarea>
-                                <span>Éducation</span>
-                            </label>
+                            <div class="input-group">
+                                <label for="permis">
+                                    Permis de conduire :
+                                    <select id="permis" name="permis" class="input" required>
+                                        <option value="">Choisir...</option>
+                                        <option value="oui">Oui</option>
+                                        <option value="non">Non</option>
+                                    </select>
+                                </label>
+                            </div>
                         </div>
 
-                        <button type="submit" class="submit">Soumettre</button>
+                        <button type="button" class="next-btn" onclick="nextStep(2)">Suivant</button>
+                    </form>
+                </div>
+
+                <!-- Étape 2: Éducation -->
+                <div class="step" id="step2">
+                    <h3>Éducation</h3>
+                    <form>
+                        <div class="education-container">
+                            <div class="education-item">
+                                <div class="flex">
+                                    <div class="input-group">
+                                        <label for="diplome">
+                                            Diplôme obtenu :
+                                            <input type="text" id="diplome" name="diplome[]" class="input" required>
+                                        </label>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="annee">
+                                            Année d'obtention :
+                                            <input type="text" id="annee" name="annee[]" class="input" required>
+                                        </label>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="ecole">
+                                            École ou Université :
+                                            <input type="text" id="ecole" name="ecole[]" class="input" required>
+                                        </label>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="en_cours">
+                                            En cours :
+                                            <input type="checkbox" id="en_cours" name="en_cours[]">
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="add-btn" onclick="addEducation()">Ajouter un diplôme</button>
+                        <button type="button" class="next-btn" onclick="nextStep(3)">Suivant</button>
+                        <button type="button" class="prev-btn" onclick="prevStep(1)">Précédent</button>
+                    </form>
+                </div>
+
+                <!-- Étape 3: Expérience -->
+                <div class="step" id="step3">
+                    <h3>Expérience</h3>
+                    <form>
+                        <div class="experience-container">
+                            <div class="experience-item">
+                                <div class="flex">
+                                    <div class="input-group">
+                                        <label for="poste">
+                                            Poste occupé :
+                                            <input type="text" id="poste" name="poste[]" class="input" required>
+                                        </label>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="entreprise">
+                                            Entreprise :
+                                            <input type="text" id="entreprise" name="entreprise[]" class="input"
+                                                required>
+                                        </label>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="date_debut">
+                                            Date de début :
+                                            <input type="date" id="date_debut" name="date_debut[]" class="input"
+                                                required>
+                                        </label>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="date_fin">
+                                            Date de fin :
+                                            <input type="date" id="date_fin" name="date_fin[]" class="input">
+                                        </label>
+                                        <label for="en_poste_aujourdhui">
+                                            À aujourd'hui :
+                                            <input type="checkbox" id="en_poste_aujourdhui"
+                                                name="en_poste_aujourdhui[]">
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="add-btn" onclick="addExperience()">Ajouter une expérience</button>
+                        <button type="button" class="next-btn" onclick="nextStep(4)">Suivant</button>
+                        <button type="button" class="prev-btn" onclick="prevStep(2)">Précédent</button>
+                    </form>
+                </div>
+
+                <!-- Étape 4: Hobbies -->
+                <div class="step" id="step4">
+                    <h3>Hobbies</h3>
+                    <form>
+                        <div class="hobbies-container">
+                            <div class="hobbies-item">
+                                <div class="flex">
+                                    <div class="input-group">
+                                        <label for="hobby">
+                                            Hobby :
+                                            <input type="text" id="hobby" name="hobby[]" class="input" required>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="add-btn" onclick="addHobby()">Ajouter un hobby</button>
+                        <button type="button" class="next-btn" onclick="nextStep(5)">Suivant</button>
+                        <button type="button" class="prev-btn" onclick="prevStep(3)">Précédent</button>
+                    </form>
+                </div>
+
+                <!-- Étape 5: Langues maîtrisées -->
+                <div class="step" id="step5">
+                    <h3>Langues maîtrisées</h3>
+                    <form>
+                        <div class="langues-container">
+                            <div class="langues-item">
+                                <div class="flex">
+                                    <div class="input-group">
+                                        <label for="langue">
+                                            Langue :
+                                            <input type="text" id="langue" name="langue[]" class="input" required>
+                                        </label>
+                                    </div>
+                                    <div class="input-group">
+                                        <label for="niveau">
+                                            Niveau :
+                                            <select id="niveau" name="niveau[]" class="input" required>
+                                                <option value="">Choisir...</option>
+                                                <option value="débutant">Débutant</option>
+                                                <option value="intermédiaire">Intermédiaire</option>
+                                                <option value="avancé">Avancé</option>
+                                                <option value="expert">Expert</option>
+                                            </select>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="add-btn" onclick="addLangue()">Ajouter une langue</button>
+                        <button type="button" class="next-btn" onclick="submitForm()">Soumettre</button>
+                        <button type="button" class="prev-btn" onclick="prevStep(4)">Précédent</button>
                     </form>
                 </div>
             </div>
-            <div class="flex-item2">
-                Colonne 2
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur minima, architecto amet iure
-                    fuga
-                    corrupti quae facere dolorem officia rerum exercitationem eum modi voluptatum nostrum temporibus!
-                    Eum,
-                    harum! Modi, aliquid?</p>
-            </div>
+        </div>
+
+        <div class="flex-item2">
+            Colonne 2
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur minima, architecto amet iure
+                fuga
+                corrupti quae facere dolorem officia rerum exercitationem eum modi voluptatum nostrum temporibus!
+                Eum,
+                harum! Modi, aliquid?</p>
         </div>
     </section>
+
 </body>
 
 </html>
