--- a/Acceuil.html
+++ b/Acceuil.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV CREATOR</title>
     <link rel="stylesheet" href="style.css">
-    <script src="javascript.js" defer></script> <!-- Ajout de 'defer' pour charger le script après le parsing du HTML -->
+    <script src="javascript.js" defer></script>
+    <!-- Ajout de 'defer' pour charger le script après le parsing du HTML -->
 </head>
+
 <body>
     <header class="header">
         <div class="logo">
