--- a/Acceuil.html
+++ b/Acceuil.html
@@ -7,6 +7,7 @@
     <title>CV CREATOR</title>
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js" defer></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <!-- Ajout de 'defer' pour charger le script après le parsing du HTML -->
 </head>
 
@@ -37,10 +38,11 @@
                     <a href="CV.html" class="button">Créer un CV gratuitement</a>
                 </div>
             </div>
-            <div class="item2"><img src="Images/young-handsome-businessman (1) (1).jpg" alt=""></div>
+            <div class="item2">
+                <img src="Images/young-handsome-businessman (1) (1).jpg" alt="Young Handsome Businessman">
+            </div>
         </div>
     </section>
-
     <section>
         <div class="calltoaction">
             <h2>Objectif</h2>
