--- a/CV.html
+++ b/CV.html
@@ -17,7 +17,7 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="Accueil.html">Accueil</a></li>
+                <li><a href="Acceuil.html">Accueil</a></li>
                 <li><a href="CV.html">Créer un CV</a></li>
                 <li><a href="articles.html">Nos Articles</a></li>
                 <li><a href="compte.html">Compte</a></li>
