--- a/Acceuil.html
+++ b/Acceuil.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV CREATOR</title>
+    <title>Acceuil</title>
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- Ajout de 'defer' pour charger le script après le parsing du HTML -->
 </head>
 
@@ -111,8 +113,24 @@
         </div>
     </section>
     <footer class="footer">
-        <p>&copy; 2024 Mon CV en ligne. Tous droits réservés.</p>
-    </footer>
+        <div class="container">
+          <p>&copy; 2024 Votre Entreprise. Tous droits réservés.</p>
+          <nav class="footer-nav">
+            <ul>
+                <li><a href="Acceuil.html">Accueil</a></li>
+                <li><a href="CV.html">Créer un CV</a></li>
+                <li><a href="articles.html">Nos Articles</a></li>
+            </ul>
+          </nav>
+          <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.youtube.com" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
