--- a/CV.html
+++ b/CV.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Créer votre CV</title>
+    <title>CréervotreCV</title>
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -253,7 +255,7 @@
                     </form>
                 </section>
             </div>
-                        <!-- Étape 8: Finalisation -->
+            <!-- Étape 8: Finalisation -->
             <div class="step" id="step8">
                 <h3>Finalisation</h3>
                 <p>Merci d'avoir rempli les informations. Vous pouvez générer votre CV en cliquant sur le bouton
@@ -267,7 +269,27 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; 2023 - Votre entreprise</p>
+        <div class="container">
+            <p>&copy; 2024 Votre Entreprise. Tous droits réservés.</p>
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="Acceuil.html">Accueil</a></li>
+                    <li><a href="CV.html">Créer un CV</a></li>
+                    <li><a href="articles.html">Nos Articles</a></li>
+                </ul>
+            </nav>
+            <div class="social-icons">
+                <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn"><i
+                        class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.youtube.com" target="_blank" aria-label="YouTube"><i
+                        class="fab fa-youtube"></i></a>
+            </div>
+        </div>
     </footer>
 </body>
 
