--- a/articles.html
+++ b/articles.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nos Articles - CV Creator</title>
+    <title>articles</title>
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- Ajout de 'defer' pour charger le script après le parsing du HTML -->
 </head>
 
@@ -28,7 +30,8 @@
     <main>
         <section class="articles-intro">
             <h1>Nos Articles</h1>
-            <p>Découvrez nos articles récents pour vous aider à créer un CV impressionnant et vous donner des conseils sur la recherche d'emploi et le développement professionnel.</p>
+            <p>Découvrez nos articles récents pour vous aider à créer un CV impressionnant et vous donner des conseils
+                sur la recherche d'emploi et le développement professionnel.</p>
         </section>
 
         <section class="articles-container">
@@ -36,7 +39,8 @@
                 <img src="https://via.placeholder.com/300" alt="Article 1">
                 <div class="article-content">
                     <h2 class="article-title">Comment Rédiger un CV Impactant</h2>
-                    <p class="article-excerpt">Découvrez nos conseils pour rédiger un CV qui se démarque des autres et attire l'attention des recruteurs.</p>
+                    <p class="article-excerpt">Découvrez nos conseils pour rédiger un CV qui se démarque des autres et
+                        attire l'attention des recruteurs.</p>
                     <a href="#" class="read-more">Lire l'article</a>
                 </div>
             </article>
@@ -45,7 +49,8 @@
                 <img src="https://via.placeholder.com/300" alt="Article 2">
                 <div class="article-content">
                     <h2 class="article-title">Les Erreurs à Éviter sur Votre CV</h2>
-                    <p class="article-excerpt">Évitez les erreurs courantes sur votre CV avec nos conseils pratiques pour améliorer vos chances d'obtenir un entretien.</p>
+                    <p class="article-excerpt">Évitez les erreurs courantes sur votre CV avec nos conseils pratiques
+                        pour améliorer vos chances d'obtenir un entretien.</p>
                     <a href="#" class="read-more">Lire l'article</a>
                 </div>
             </article>
@@ -54,7 +59,8 @@
                 <img src="https://via.placeholder.com/300" alt="Article 3">
                 <div class="article-content">
                     <h2 class="article-title">Comment Mettre en Valeur Vos Compétences</h2>
-                    <p class="article-excerpt">Apprenez à mettre en valeur vos compétences pour que votre CV reflète efficacement votre potentiel et vos qualifications.</p>
+                    <p class="article-excerpt">Apprenez à mettre en valeur vos compétences pour que votre CV reflète
+                        efficacement votre potentiel et vos qualifications.</p>
                     <a href="#" class="read-more">Lire l'article</a>
                 </div>
             </article>
@@ -63,7 +69,8 @@
                 <img src="https://via.placeholder.com/300" alt="Article 4">
                 <div class="article-content">
                     <h2 class="article-title">Les Meilleurs Modèles de CV en 2024</h2>
-                    <p class="article-excerpt">Découvrez les meilleurs modèles de CV en 2024 pour vous aider à créer un CV moderne et professionnel.</p>
+                    <p class="article-excerpt">Découvrez les meilleurs modèles de CV en 2024 pour vous aider à créer un
+                        CV moderne et professionnel.</p>
                     <a href="#" class="read-more">Lire l'article</a>
                 </div>
             </article>
@@ -71,8 +78,24 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 CV Creator. Tous droits réservés.</p>
-    </footer>
+        <div class="container">
+          <p>&copy; 2024 Votre Entreprise. Tous droits réservés.</p>
+          <nav class="footer-nav">
+            <ul>
+                <li><a href="Acceuil.html">Accueil</a></li>
+                <li><a href="CV.html">Créer un CV</a></li>
+                <li><a href="articles.html">Nos Articles</a></li>
+            </ul>
+          </nav>
+          <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.youtube.com" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
