--- a/CV.html
+++ b/CV.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="logo.png" alt="logo">
+            <img src="Images/logo.gif" alt="logo">
         </div>
         <nav class="menu">
             <ul>
